# controls

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
controls/: motor_output.py  orientation_control.py  pose_publisher.py  sub_init.py  velocity_transformer.py  vision_action_server.py
controls/controllers/: OrientationController.py  PIDController.py
launch/: orientation_hold.launch  robosub_controls.launch  robosub_controls.launch.py  robosub_controls.launch.xml
mavlink-programs/: change_flight_mode.py.save  change_flight_mode.py.save.1
robosub/: ControlMode.py  HeadingController.py  PIDController.py  RazorIMU.py  VelocityController.py  cameraTest.py  getIMUData.py  getYaw.py  imu_to_rostopic.py  mavros_listener.py  setControlMode.py  setHeading.py  setPosition.py  setRCOutput.py  setZero.py  subInit.py  sub_init.py  utils.py
robosub/controllers/: VisionController.py
robosub/raw_video/: webcam_video_2019-04-21 01_58_29.722752.avi  webcam_video_2019-04-21 02_01_19.346267.avi  webcam_video_2019-04-21 02_19_14.679327.avi  webcam_video_2019-04-21 02_21_54.328302.avi  webcam_video_2019-04-21 02_23_24.770125.avi  webcam_video_2019-04-21 02_31_24.717054.avi  webcam_video_2019-04-21 02_32_43.377003.avi  webcam_video_2019-04-21 02_45_30.867070.avi  webcam_video_2019-04-21 02_51_22.014225.avi  webcam_video_2019-04-21 02_52_39.599314.avi  webcam_video_2019-04-21 02_56_57.712933.avi  webcam_video_2019-04-21 03_00_13.046925.avi  zed_test.avi  (+24 more)
src/: DetectGate.cpp  SetupBehaviorTree.cpp  tree.xml
test/: test_rotation_pid.py
(+21 files in other folders)
